# gradio-box-promptable-image

./: README.md  pyproject.toml
backend/gradio_box_promptable_image/: __init__.py  box_promptable_image.py
backend/gradio_box_promptable_image/templates/component/: index.js  style.css
backend/gradio_box_promptable_image/templates/example/: index.js  style.css
demo/: app.py  space.py
frontend/: Index.svelte  package-lock.json  package.json
frontend/shared/: BoxDrawer.svelte  ClearImage.svelte  ImageUploader.svelte
